--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 Trying to make it easy to accept payments in Python. So far, we're Paython.
 
 Currently - you can just import the gateway needed from gateways & auth/settle/capture (sale)/void/credit once you instantiate with the proper credentials.
+
+Supported Gateways:
+
+* Authorize.net
+* Innovative Gateway Solutions (Intuit)
+* First Data Global Gateway (formerly Linkpoint?)
